syntax = "proto3";
package gfs.chunk_operations;

option go_package = "github.com/Mit-Vin/GFS-Distributed-Systems/api/proto/chunk_operations";

import "api/proto/common/common.proto";

service ChunkOperationService {
    rpc WriteChunk(WriteChunkRequest) returns (WriteChunkResponse) {}
    rpc ReadChunk(ReadChunkRequest) returns (ReadChunkResponse) {}    
    rpc RecordAppendChunk(RecordAppendChunkRequest) returns (RecordAppendChunkResponse) {}
    rpc PushDataToPrimary(PushDataToPrimaryRequest) returns (PushDataToPrimaryResponse) {}
}

message WriteChunkRequest {
    string operation_id = 1;
    common.ChunkHandle chunk_handle = 2;
    int64 offset = 3;
    repeated common.ChunkLocation secondaries = 4;
}

message WriteChunkResponse {
    common.Status status = 1;
}

message ReadChunkRequest {
    common.ChunkHandle chunk_handle = 1;
    int64 offset = 2;
    int64 length = 3;
}

message ReadChunkResponse {
    common.Status status = 1;
    bytes data = 2;
}

message RecordAppendChunkRequest {
    string operation_id = 1;
    string idempotentency_id = 2;
    common.ChunkHandle chunk_handle = 3;
    repeated common.ChunkLocation secondaries = 4;
}

message RecordAppendChunkResponse {
    common.Status status = 1;
    int64 offset_in_chunk = 2;
}

message PushDataToPrimaryRequest {
    string operation_id = 1;
    common.ChunkHandle chunk_handle = 2;
    bytes data = 3;
    uint32 checksum = 4;
    repeated common.ChunkLocation secondary_locations = 5;
}

message PushDataToPrimaryResponse {
    common.Status status = 1;
}
